--- a/Example/Base.lproj/Main.storyboard
+++ b/Example/Base.lproj/Main.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vJl-cE-6C9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vJl-cE-6C9">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,17 +19,17 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IHn-f3-EKg" customClass="VerticalCardSwiper" customModule="VerticalCardSwiper">
                                 <rect key="frame" x="0.0" y="44" width="375" height="623"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="IHn-f3-EKg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0rk-UP-46B"/>
                             <constraint firstAttribute="bottom" secondItem="IHn-f3-EKg" secondAttribute="bottom" id="JKH-Dg-PnR"/>
                             <constraint firstItem="IHn-f3-EKg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Lk7-Ob-zJV"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="IHn-f3-EKg" secondAttribute="trailing" id="xLb-Ol-szY"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="Z2V-KD-7Kc">
                         <leftBarButtonItems>
@@ -44,6 +45,12 @@
                             </barButtonItem>
                         </leftBarButtonItems>
                         <rightBarButtonItems>
+                            <barButtonItem title="down" image="rectangle.expand.vertical" catalog="system" id="pQi-sG-qS1">
+                                <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="5"/>
+                                <connections>
+                                    <action selector="pressExpand:" destination="BYZ-38-t0r" id="uth-Sh-Oxw"/>
+                                </connections>
+                            </barButtonItem>
                             <barButtonItem title="up" image="up-arrow" id="Ek1-Zq-X5B">
                                 <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="50"/>
                                 <connections>
@@ -98,7 +105,11 @@
     <resources>
         <image name="down-arrow" width="22" height="22"/>
         <image name="left-arrow" width="22" height="22"/>
+        <image name="rectangle.expand.vertical" catalog="system" width="128" height="122"/>
         <image name="right-arrow" width="22" height="22"/>
         <image name="up-arrow" width="22" height="22"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
